objects/ASI_eForm_Pre_Trip_Approval__c.object
<CustomObject>
    <fields>
        <fullName>ASI_eFom_sys_TravellerName__c</fullName>
        <formula>IF( NOT( ISBLANK( ASI_eForm_Employee_Traveller__c ) ) , ASI_eForm_Employee_Traveller__r.FirstName + &apos; &apos; + ASI_eForm_Employee_Traveller__r.LastName,  ASI_eForm_Traveller__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Traveller Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Pre_Trip_Approvals1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Attention__c</fullName>
        <label>Attention</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Company__c</fullName>
        <label>Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Cost_Centre__c</fullName>
        <label>Cost Centre</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Currency__c</fullName>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HKD</fullName>
                    <default>true</default>
                    <label>HKD</label>
                </value>
                <value>
                    <fullName>CNY</fullName>
                </value>
                <value>
                    <fullName>AUD</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>JPY</fullName>
                </value>
                <value>
                    <fullName>SGD</fullName>
                </value>
                <value>
                    <fullName>THB</fullName>
                </value>
                <value>
                    <fullName>TWD</fullName>
                </value>
                <value>
                    <fullName>USD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_Department__c</fullName>
        <label>Department</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Employee_Traveller__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Employee Traveller</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Pre-Trip Approvals (Employee Traveller)</relationshipLabel>
        <relationshipName>Pre_Trip_Approvals_Traveller</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Home_Leave__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Home Leave</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Hotel_1_From__c</fullName>
        <label>Hotel 1 From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Hotel_1_Name__c</fullName>
        <label>Hotel 1 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Hotel_1_Rate__c</fullName>
        <label>Hotel 1 Rate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Hotel_1_To__c</fullName>
        <label>Hotel 1 To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Hotel_2_From__c</fullName>
        <label>Hotel 2 From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Hotel_2_Name__c</fullName>
        <label>Hotel 2 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Hotel_2_Rate__c</fullName>
        <label>Hotel 2 Rate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Hotel_2_To__c</fullName>
        <label>Hotel 2 To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Hotel_3_From__c</fullName>
        <label>Hotel 3 From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Hotel_3_Name__c</fullName>
        <label>Hotel 3 Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Hotel_3_Rate__c</fullName>
        <label>Hotel 3 Rate</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Hotel_3_To__c</fullName>
        <label>Hotel 3 To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Hotel_Details__c</fullName>
        <label>Hotel Details</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Notify_Travel_Agent__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Notify Travel Agent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Owner_Full_Name__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp;  OwnerId ,  Owner:User.FirstName  &amp; &quot; &quot;  &amp;  Owner:User.LastName )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Payment_Method__c</fullName>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Individual Corp Card</fullName>
                </value>
                <value>
                    <fullName>Company Corp Card</fullName>
                </value>
                <value>
                    <fullName>Invoice</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_Position__c</fullName>
        <label>Position</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Preview_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Preview Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Pre_Trip_Approvals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Purpose__c</fullName>
        <label>Purpose</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Recharge_To__c</fullName>
        <label>Recharge To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Remarks__c</fullName>
        <label>Remarks</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                    <default>true</default>
                    <label>Draft</label>
                </value>
                <value>
                    <fullName>Submitted</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_eForm_Submit_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submit Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Sys_Allow_Submit_Approval__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sys_Allow Submit Approval</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Total_Amount_Flight__c</fullName>
        <label>Total Amount Flight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Total_Amount_Hotel__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Amount Hotel</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Travel_Begin_Date__c</fullName>
        <label>Travel Begin ETD</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Travel_Return_Time__c</fullName>
        <label>Travel Return ETA</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Traveller_Company__c</fullName>
        <label>External Traveller Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_Traveller__c</fullName>
        <label>External Traveller</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_sys_TravellerCompany__c</fullName>
        <formula>IF( NOT( ISBLANK( ASI_eForm_Traveller_Company__c ) ) , ASI_eForm_Traveller_Company__c, ASI_eForm_Company__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Traveller Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_eForm_sys_resubmit__c</fullName>
        <label>Sys_resubmit</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Pre-Trip Approval</label>
    <listViews>
        <fullName>ASI_eForm_All_PreTrip_Approvals</fullName>
        <columns>NAME</columns>
        <columns>ASI_eForm_Status__c</columns>
        <columns>ASI_eFom_sys_TravellerName__c</columns>
        <columns>ASI_eForm_sys_TravellerCompany__c</columns>
        <columns>ASI_eForm_Purpose__c</columns>
        <columns>ASI_eForm_Payment_Method__c</columns>
        <columns>ASI_eForm_Owner_Full_Name__c</columns>
        <columns>ASI_eForm_Recharge_To__c</columns>
        <columns>ASI_eForm_Notify_Travel_Agent__c</columns>
        <columns>ASI_eForm_Travel_Begin_Date__c</columns>
        <columns>ASI_eForm_Travel_Return_Time__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Pre-Trip Approvals</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ASI_eForm_My_PreTrip_Approvals</fullName>
        <columns>NAME</columns>
        <columns>ASI_eForm_Status__c</columns>
        <columns>ASI_eFom_sys_TravellerName__c</columns>
        <columns>ASI_eForm_sys_TravellerCompany__c</columns>
        <columns>ASI_eForm_Purpose__c</columns>
        <columns>ASI_eForm_Payment_Method__c</columns>
        <columns>ASI_eForm_Recharge_To__c</columns>
        <columns>ASI_eForm_Cost_Centre__c</columns>
        <columns>ASI_eForm_Owner_Full_Name__c</columns>
        <columns>ASI_eForm_Hotel_1_From__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Pre-Trip Approvals</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>PRTAF-{0000000}</displayFormat>
        <label>Form No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pre-Trip Approvals</pluralLabel>
    <recordTypes>
        <fullName>ASI_eForm_HK_Pre_Trip_Approval</fullName>
        <active>true</active>
        <label>Pre-Trip Approval (HK)</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_eForm_HK_Pre_Trip_Approval_Final</fullName>
        <active>true</active>
        <label>Pre-Trip Approval Final (HK)</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_eForm_SG_Pre_Trip_Approval</fullName>
        <active>true</active>
        <label>Pre-Trip Approval (SG)</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_eForm_SG_Pre_Trip_Approval_Final</fullName>
        <active>true</active>
        <label>Pre-Trip Approval Final (SG)</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>ASI_eForm_Pre_Trip_Manager_Access__c</fullName>
        <label>ASI eForm Pre-Trip Manager Access</label>
    </sharingReasons>
    <validationRules>
        <fullName>ASI_eForm_Company_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>(  NOT(ISBLANK( ASI_eForm_Company__c )) &amp;&amp;  NOT( ISBLANK( ASI_eForm_Traveller_Company__c ) )   
&amp;&amp;  NOT( ISBLANK(  ASI_eForm_Employee_Traveller__c  ) ))</errorConditionFormula>
        <errorMessage>Only Either Company or External Traveller Company can be filled.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_eForm_External_Traveller_Company_Req</fullName>
        <active>true</active>
        <errorConditionFormula>NOT(ISBLANK(ASI_eForm_Traveller__c)) &amp;&amp; ISBLANK( ASI_eForm_Traveller_Company__c)</errorConditionFormula>
        <errorDisplayField>ASI_eForm_Traveller_Company__c</errorDisplayField>
        <errorMessage>Must input a value on External Traveller Company for the External Traveller.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_eForm_Owner_Approver_Duplicate</fullName>
        <active>true</active>
        <errorConditionFormula>ASI_eForm_Approver__c  =  OwnerId</errorConditionFormula>
        <errorDisplayField>ASI_eForm_Approver__c</errorDisplayField>
        <errorMessage>Approver and Owner cannot be the same.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ASI_eForm_Traveller_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>(ISBLANK(ASI_eForm_Traveller__c) &amp;&amp;  ISBLANK( ASI_eForm_Employee_Traveller__c)) || ( NOT( ISBLANK(ASI_eForm_Traveller__c)) &amp;&amp; NOT( ISBLANK(ASI_eForm_Employee_Traveller__c)) )</errorConditionFormula>
        <errorMessage>Only either External Traveller or Employee Traveller can be inputted.</errorMessage>
    </validationRules>
</CustomObject>